--- a/partials/index.pug
+++ b/partials/index.pug
@@ -1,12 +1,11 @@
-
 doctype html
 html(lang = 'en')
 
   block vars
   - var navLinks = []
-  - navLinks.push({ href: '/', text: 'cppfs' })
+  - navLinks.push({ href: '/', text: 'cppexpose' })
   - navLinks.push({ href: '/docs.html', text: 'Documentation' })
-  - navLinks.push({ href: 'https://github.com/cginternals/cppfs', text: 'GitHub' })
+  - navLinks.push({ href: 'https://github.com/cginternals/cppexpose', text: 'GitHub' })
 
   include head.pug
   body.bg-light
