--- a/index.pug
+++ b/index.pug
@@ -13,7 +13,7 @@ block header
     header.jumbatron
       img(src = 'img/cppexpose-logo.svg' alt = 'cppexpose logo').mb-2.w-50.d-none.d-md-block
       img(src = 'img/cppexpose-logo.svg' alt = 'cppexpose logo').mb-2.d-block.d-md-none
-      p.lead cppexpose is a cross-platform C++11 library that provides tools for introspection of types, properties, and classes. This allows for a C++ program to expose its interfaces into runtime, making it possible to, e.g., create automatic GUI representations for interfaces, or to expose them into a scripting environment.
+      p.lead cppexpose is a cross-platform C++11 library that provides tools for introspection of types, properties, and classes.
 
 block content
   section.container
